Update JVM option.